--- a/test.html
+++ b/test.html
@@ -23,10 +23,10 @@
 <body> 
   
   <div>
-    <img src="./image/winter1.jpg">
-    <img src="./image/winter2.jpg">
-    <img src="./image/winter3.jpg">
-    <img src="./image/winter4.jpg">
+    <img src="mywebsite/image/winter1.jpg">
+    <img src="mywebsite/image/winter2.jpg">
+    <img src="mywebsite/image/winter3.jpg">
+    <img src="mywebsite/image/winter4.jpg">
   </div>
   
 </body>
