--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   <div class="container">
     <div class="right"></div>
     <div class="photo">
-      <img src="돼지1.jpg" width="500px" height="585px">
-      <img src="돼지2.jpg" width="500px" height="585px">
+      <img src="mywebsite/돼지1.jpg" width="500px" height="585px">
+      <img src="mywebsite/돼지2.jpg" width="500px" height="585px">
     </div>
     <div class="left"></div>
   </div>
