index.html 2차 수정

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       margin:0;
     }
 
+    h2 {
+      color:yellow;
+    }
+
     .container {
       display:flex;
       width:98vw;
@@ -50,7 +54,9 @@
   
   <h1>심술 돼지</h1>
   <div class="container">
-    <div class="right"></div>
+    <div class="right">
+      <h2>심술 좀 고만 부려라라</h2>
+    </div>
     <div class="photo">
       <img src="mywebsite/돼지1.jpg" width="500px" height="585px">
       <img src="mywebsite/돼지2.jpg" width="500px" height="585px">
