index.html 3차 수정

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       margin:0;
     }
 
-    h2 {
-      color:yellow;
-    }
+   
 
     .container {
       display:flex;
@@ -52,10 +50,10 @@
 
 <body> 
   
-  <h1>심술 돼지</h1>
+  <h1>심술 돼지 심술 좀 고만부려</h1>
   <div class="container">
     <div class="right">
-      <h2>심술 좀 고만 부려라라</h2>
+      
     </div>
     <div class="photo">
       <img src="mywebsite/돼지1.jpg" width="500px" height="585px">
