--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       
     </div>
     <div class="photo">
-      <img src="/mywebsite/pig1.jpg" width="500px" height="585px">
-      <img src="/mywebsite/pig2.jpg" width="500px" height="585px">
+      <img src="/sunggichan/mywebsite/pig1.jpg" width="500px" height="585px">
+      <img src="/sunggichan/mywebsite/pig2.jpg" width="500px" height="585px">
     </div>
     <div class="left"></div>
   </div>
