--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body> 
   
   <h1>Hellow World</h1>
-  <img src="sunggichan/mywebsite/pig1.jpg" width="400" height="500">
+  <img src="/mywebsite/pig1.jpg" width="400" height="500">
   
 </body>
