--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="photo">
       <img src="./pig1.jpg" width="100%" height="100%">
       <img src="./pig2.jpg" width="100%" height="100%">
-      <img src="/돼지3.jpeg" width="100%" height="100%">
+      <img src="./돼지3.jpeg" width="100%" height="100%">
       <img src="./갈남항1.jpg" width="100%" height="100%">
       <img src="./갈남항2.jpg" width="100%" height="100%">
     </div>
