--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       <img src="./pig1.jpg" width="100%" height="100%">
       <img src="./pig2.jpg" width="100%" height="100%">
       <img src="./돼지3.jpeg" width="100%" height="100%">
+      <img src="./산타마을1.jpeg" width="100%" height="100%">
+      <img src="./산타마을2.jpeg" width="100%" height="100%">
       <img src="./갈남항1.jpg" width="100%" height="100%">
       <img src="./갈남항2.jpg" width="100%" height="100%">
     </div>
